Reorganized output from fitting routines

--- a/tex/proposal.tex
+++ b/tex/proposal.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\title{The dimensionality of stellar abundances space for red clump stars from APOGEE data}
+\title{The dimensionality of stellar abundance space for red clump stars from APOGEE data}
 \author{Natalie Price-Jones, supervised by Professor Jo Bovy}
 
 \begin{abstract}
