Final draft of proposal submitted

--- a/tex/cite.bib
+++ b/tex/cite.bib
@@ -2,7 +2,7 @@
    author = {{Bovy}, J. and {Rix}, H.-W. and {Schlafly}, E.~F. and {Nidever}, D.~L. and 
 	{Holtzman}, J.~A. and {Shetrone}, M. and {Beers}, T.~C.},
     title = "{The stellar population structure of the Galactic disk}",
-  journal = {ArXiv e-prints},
+  journal = {ApJ, submitted},
 archivePrefix = "arXiv",
    eprint = {1509.05796},
  keywords = {Astrophysics - Astrophysics of Galaxies},
@@ -81,7 +81,7 @@ archivePrefix = "arXiv",
   {Sobeck}, J.~S. and {Thompson}, B. and {Troup}, N.~W. and {Weinberg}, D.~H. and 
   {Zamora}, O.},
     title = "{The Apache Point Observatory Galactic Evolution Experiment (APOGEE)}",
-  journal = {ArXiv e-prints},
+  journal = {AJ, submitted},
 archivePrefix = "arXiv",
    eprint = {1509.05420},
  primaryClass = "astro-ph.IM",
@@ -101,7 +101,7 @@ archivePrefix = "arXiv",
   {Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and 
   {Hasselquist}, S. and {Hayden}, M.~R. and {Hearty}, F.~R. and 
   {Ivans}, I. and {Majewski}, S.~R. and {Martell}, S. and {Meszaros}, S. and 
-  {Muna}, D. and {Nidever}, D. and {Nguyen}, D.~C. and {O{\rsquo}Connell}, R.~W. and 
+  {Muna}, D. and {Nidever}, D. and {Nguyen}, D.~C. and {O{rsquo}Connell}, R.~W. and 
   {Pan}, K. and {Pinsonneault}, M. and {Robin}, A.~C. and {Schiavon}, R.~P. and 
   {Shane}, N. and {Sobeck}, J. and {Smith}, V.~V. and {Troup}, N. and 
   {Weinberg}, D.~H. and {Wilson}, J.~C. and {Wood-Vasey}, W.~M. and 
@@ -120,6 +120,39 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015AJ....150..148H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{bovy2014,
+   author = {{Bovy}, J. and {Nidever}, D.~L. and {Rix}, H.-W. and {Girardi}, L. and 
+  {Zasowski}, G. and {Chojnowski}, S.~D. and {Holtzman}, J. and 
+  {Epstein}, C. and {Frinchaboy}, P.~M. and {Hayden}, M.~R. and 
+  {Rodrigues}, T.~S. and {Majewski}, S.~R. and {Johnson}, J.~A. and 
+  {Pinsonneault}, M.~H. and {Stello}, D. and {Allende Prieto}, C. and 
+  {Andrews}, B. and {Basu}, S. and {Beers}, T.~C. and {Bizyaev}, D. and 
+  {Burton}, A. and {Chaplin}, W.~J. and {Cunha}, K. and {Elsworth}, Y. and 
+  {Garc{\'{\i}}a}, R.~A. and {Garc{\'{\i}}a-Her{\'n}andez}, D.~A. and 
+  {Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Hearty}, F.~R. and {Hekker}, S. and 
+  {Kallinger}, T. and {Kinemuchi}, K. and {Koesterke}, L. and 
+  {M{\'e}sz{\'a}ros}, S. and {Mosser}, B. and {O'Connell}, R.~W. and 
+  {Oravetz}, D. and {Pan}, K. and {Robin}, A.~C. and {Schiavon}, R.~P. and 
+  {Schneider}, D.~P. and {Schultheis}, M. and {Serenelli}, A. and 
+  {Shetrone}, M. and {Silva Aguirre}, V. and {Simmons}, A. and 
+  {Skrutskie}, M. and {Smith}, V.~V. and {Stassun}, K. and {Weinberg}, D.~H. and 
+  {Wilson}, J.~C. and {Zamora}, O.},
+    title = "{The APOGEE Red-clump Catalog: Precise Distances, Velocities, and High-resolution Elemental Abundances over a Large Area of the Milky Way's Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1405.1032},
+ keywords = {Galaxy: abundances, Galaxy: disk, Galaxy: stellar content, Galaxy: structure, stars: distances, stars: general},
+     year = 2014,
+    month = aug,
+   volume = 790,
+      eid = {127},
+    pages = {127},
+      doi = {10.1088/0004-637X/790/2/127},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...790..127B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{GAIA,
    author = {{Jordan}, S.},
@@ -140,12 +173,31 @@ archivePrefix = "arXiv",
 @ARTICLE{openclusters,
    author = {{Bovy}, J.},
     title = "{The chemical homogeneity of open clusters}",
-  journal = {ArXiv e-prints},
+  journal = {ApJ submitted},
 archivePrefix = "arXiv",
    eprint = {1510.06745},
  keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
      year = 2015,
     month = oct,
    adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151006745B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{bovy2012,
+   author = {{Bovy}, J. and {Rix}, H.-W. and {Liu}, C. and {Hogg}, D.~W. and 
+  {Beers}, T.~C. and {Lee}, Y.~S.},
+    title = "{The Spatial Structure of Mono-abundance Sub-populations of the Milky Way Disk}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1111.1724},
+ primaryClass = "astro-ph.GA",
+ keywords = {Galaxy: abundances, Galaxy: disk, Galaxy: evolution, Galaxy: formation, Galaxy: fundamental parameters, Galaxy: structure},
+     year = 2012,
+    month = jul,
+   volume = 753,
+      eid = {148},
+    pages = {148},
+      doi = {10.1088/0004-637X/753/2/148},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...753..148B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
