--- a/Red Clump Plots.ipynb
+++ b/Red Clump Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -12,11 +12,28 @@
      "output_type": "stream",
      "text": [
       " This call to matplotlib.use() has no effect\n",
-      "because the backend has already been chosen;\n",
+      "because the the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "\n",
+      " This call to matplotlib.use() has no effect\n",
+      "because the the backend has already been chosen;\n",
       "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
       "or matplotlib.backends is imported for the first time.\n",
       "\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "No module named docopt",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/price-jones/Code/rcapogee-plots/run_residuals.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpolyfit\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdocopt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mempca\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mempca\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccess_spectrum\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0macs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: No module named docopt"
      ]
     }
    ],
@@ -198,6 +215,56 @@
     "        neweigvecs_w[vec][ind] = starsample.weighting(empcamodel_weight.eigvec[vec],elems[ind])\n",
     "        \n",
     "# COMPARE THESE TO EMPCA RESULTS ON WEIGHTED RESIDUAL SPACE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create weighted residuals\n",
+    "weighted = np.ma.masked_array(np.zeros((len(tophats.keys()),len(testsample.specs))))\n",
+    "weightedsigs = np.ma.masked_array(np.zeros((len(tophats.keys()),len(testsample.specs))))\n",
+    "i=0\n",
+    "for elem in elems:\n",
+    "    weightedr = testsample.weighting(testsample.residual,elem,\n",
+    "                                   testsample.outName('pkl','resids',elem=elem,order = testsample.order,cross=testsample.cross))\n",
+    "    weighteds = testsample.weighting(testsample.sigma,elem,\n",
+    "                                   testsample.outName('pkl','sigma',elem=elem,order = testsample.order,seed = testsample.seed))\n",
+    "    #doubleResidualHistPlot(elem,weightedr,weighteds,\n",
+    "    #                       testsample.outName('res','residhist',elem = elem,order = testsample.order,cross=testsample.cross,seed = testsample.seed),\n",
+    "    #                       bins = 50)\n",
+    "    weighted[i] = weightedr\n",
+    "    weightedsigs[i] = weighteds\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Do EMPCA on weighted residuals\n",
+    "nvecs = 5\n",
+    "empcaname = starsample.outName('pkl',content = 'empca_element',order = starsample.order,seed = starsample.seed,cross=starsample.cross)\n",
+    "empcaname = empcaname.split('pkl')[0]+'nvec{0}'.format(nvecs)+'.pkl'\n",
+    "if os.path.isfile(empcaname):\n",
+    "    empcamodel,empcamodel_weight = acs.pklread(empcaname)\n",
+    "elif not os.path.isfile(empcaname):\n",
+    "    mask = (weighted.mask==False)\n",
+    "    weights = mask.astype(int)\n",
+    "    weights[mask] = 1./testsample.sigma # Correct?\n",
+    "    empcamodel,runtime1 = timeIt(empca,weighted,weights = mask.astype(int),nvec=nvecs)\n",
+    "    print 'Runtime:', runtime1/60.,' min'\n",
+    "    empcamodel_weight,runtime2 = timeIt(empca,weighted,weights = weights,nvec=nvecs)\n",
+    "    print 'Runtime:', runtime2/60.,' min'\n",
+    "    acs.pklwrite(empcaname,[empcamodel,empcamodel_weight])"
    ]
   },
   {
