Testing running on the server reveals memory issues such that even the small RC sample doesn't run

--- a/Open Cluster Plots.ipynb
+++ b/Open Cluster Plots.ipynb
@@ -2,22 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/Natalie/Code/apogee/apogee/spec/window.py:88: RuntimeWarning: invalid value encountered in greater\n",
-      "  mask= ((win > 0.)*(True-numpy.isnan(win))).astype('int')\n"
+      " This call to matplotlib.use() has no effect\n",
+      "because the the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Initialization runtime 3.48 s\n",
+      "Number of stars 484\n",
+      "\n",
+      "Maximum SNR before correction 219.97\n",
+      "SNR correction runtime 0.10 s\n",
+      "Maximum SNR before correction 200.00\n",
+      "\n",
+      "Nonzero Minimum SNR before mask 0.0002\n",
+      "SNR cut runtime 0.14 s\n",
+      "Minimum SNR after mask 50.0000\n",
+      "\n",
+      "Bitmask application runtime 0.17 s\n",
+      "\n",
+      "Independent variable array generation runtime 1.91 s\n"
      ]
     }
    ],
    "source": [
-    "run run_residuals -o 1"
+    "run run_residuals -v -o 1"
    ]
   },
   {
@@ -574,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
