--- a/Red Clump Plots.ipynb
+++ b/Red Clump Plots.ipynb
@@ -2,48 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " This call to matplotlib.use() has no effect\n",
-      "because the the backend has already been chosen;\n",
-      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
-      "or matplotlib.backends is imported for the first time.\n",
-      "\n",
+      "/usr/lib/python2.7/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
+      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n",
       "\n",
       " This call to matplotlib.use() has no effect\n",
       "because the the backend has already been chosen;\n",
       "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
       "or matplotlib.backends is imported for the first time.\n",
-      "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "No module named docopt",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/home/price-jones/Code/rcapogee-plots/run_residuals.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpolyfit\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdocopt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mempca\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mempca\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccess_spectrum\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0macs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named docopt"
      ]
     }
    ],
    "source": [
-    "run run_residuals -x -i FE_H -u -0.1 -d -0.105 -s red_clump -c False"
+    "run run_residuals -gx -i FE_H -u -0.1 -d -0.105 -s red_clump -c False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'starsample' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-eae2b71505bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstarsample\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'starsample' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "starsample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
