Running on larger red clump sample

--- a/Red Clump Plots.ipynb
+++ b/Red Clump Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -12,30 +12,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/usr/lib/python2.7/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
+      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n",
       "\n",
-      "Initialization runtime 0.85 s\n",
-      "Number of stars 194\n",
-      "\n",
-      "Maximum SNR before correction 219.82\n",
-      "SNR correction runtime 0.04 s\n",
-      "Maximum SNR before correction 200.00\n",
-      "\n",
-      "Nonzero Minimum SNR before mask 0.0012\n",
-      "SNR cut runtime 0.07 s\n",
-      "Minimum SNR after mask 50.0025\n",
-      "\n",
-      "Bitmask application runtime 0.13 s\n",
-      "\n",
-      "Pixel residuals runtime 0.45 s\n",
-      "Maximum residual 0.201419736421 \n",
-      "\n",
-      "Finding random sigma runtime 1.15 s\n",
+      " This call to matplotlib.use() has no effect\n",
+      "because the the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "run run_residuals -vx -i FE_H -u -0.1 -d -0.105 -s red_clump -c False"
+    "run run_residuals -vx -i FE_H -u -0.4 -d -0.5 -s red_clump -c False"
    ]
   },
   {
@@ -490,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
