Updating for Overleaf compatibility in midterm update

--- a/tex/Midterm Report/update.tex
+++ b/tex/Midterm Report/update.tex
@@ -12,7 +12,6 @@
 Recent spectroscopic surveys have provided abundant data on stars in the Milky Way. I will analyze a subset of data from the Apache Point Observatory Galactic Evolution Experiment (APOGEE) survey, in the form of red clump stars. These metal-enriched stars offer a complex abundance space to explore, which I will do by studying the spectra themselves, rather than derived abundances. This direct use of the spectra facilitates the characterization of errors and systematic effects in interpretation of absorption features. An understanding of these uncertainties allows accurate investigation of the multi-dimensional abundance space, which may reveal trends in abundances with stellar age and position throughout the Milky Way. Tracing out a star's abundances and these possible trends offers a way to investigate the dynamical and formation history of the Milky Way.
 
 %These trends may also provide a comparative method to assess uncertainties associated with current abundance calculations.
-
 \end{abstract}
 
 \section{Introduction}
@@ -65,6 +64,6 @@ I can improve upon the results of classic PCA method (applied to either the pixe
 \end{itemize}
 \end{itemize}
 
-\bibliography{cite}
+\bibliography{update}
 
 \end{document}
